# advent-of-code-2025

./: .gitignore  Cargo.toml  flake.nix
.cargo/: config.toml
.github/workflows/: check.yml
nix/: checks.nix  dev.nix
scripts/: viz_day8.py
src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  rangeset.rs
