[package]
name = "advent-of-code-2025"
version = "0.1.0"
authors = ["Federico Ravasio <ravasio.federico@gmail.com>"]
edition = "2024"

[lib]
doctest = false
bench = false

[dependencies]
aoc-runner = "~0.3"
aoc-runner-derive = "~0.3"
itertools = "0.14.0"
ndarray = "0.17.1"
rayon = "1.11.0"

[dev-dependencies]
rand = "0.9"
rand_chacha = "0.9"

[profile.release]
lto = "fat"
