[package]
name = "advent-of-code-2025"
version = "0.1.0"
authors = ["Federico Ravasio <ravasio.federico@gmail.com>"]
edition = "2024"

[lib]
doctest = false
bench = false

[dependencies]
aoc-runner = "~0.3"
aoc-runner-derive = "~0.3"
derive_more = { version = "2.1.0", features = ["deref", "deref_mut"] }
itertools = "0.14.0"
ndarray = "0.17.1"
ordered-float = "5.1.0"
rayon = "1.11.0"
rustc-hash = "2.1.1"

[dev-dependencies]
rand = "0.9"
rand_chacha = "0.9"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
lto = "fat"
debug = true
